# PaddleLiteDemo

./: .gitignore  CMakeLists.txt  README.md
assets/: downloadmodel.sh
image_classification_demo/: CMakeLists.txt
keypoint_detection_demo/: CMakeLists.txt
model_test/: CMakeLists.txt
object_detection_demo/: CMakeLists.txt
ocr/: clipper.cpp  cls_process.cc  crnn_process.cc  crnn_process.h  db_post_process.cc  db_post_process.h  ocr_db_crnn.cc
semantic_segmentation_demo/: CMakeLists.txt
